[gd_scene load_steps=2 format=3 uid="uid://d31ybwojq0xei"]

[ext_resource type="Script" path="res://scenes/player/ui/move_controller.gd" id="1"]

[node name="MoveController" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="LeftButton" type="ColorRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0.0941176)

[node name="Separator" type="ColorRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="RightButton" type="ColorRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0.0941176)

[connection signal="gui_input" from="LeftButton" to="." method="_on_LeftButton_gui_input"]
[connection signal="mouse_exited" from="LeftButton" to="." method="_on_LeftButton_mouse_exited"]
[connection signal="gui_input" from="RightButton" to="." method="_on_RightButton_gui_input"]
[connection signal="mouse_exited" from="RightButton" to="." method="_on_RightButton_mouse_exited"]
